Fix text overflow of the extension title

--- a/src/sass/components/extensions.scss
+++ b/src/sass/components/extensions.scss
@@ -89,6 +89,8 @@
         &-name{
             font-size: 1.1em;
             margin-bottom: 0.8em;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         &-descr{
             line-height: 1.5;
